@@ -241,7 +241,7 @@
 		<!-- down part -->
 		<hbox>
 
-			<cgroup id="bsel" embed.h=":bsel ilt 1" embed.b=":bsel ilt 1">
+			<cgroup id="bsel" embed.h=":bsel ilt 1" embed.b=":bsel ilt 1" width.min="855" height.min="350">
 				<grid rows="11" cols="25" transpose="true">
 					<!-- Labels -->
 					<label text="labels.band" pad.v="4" bg.color="bg_schema" hreduce="true"/>
@@ -518,7 +518,7 @@
 							</align>
 							<hsep vreduce="true"/>
 
-							<grid rows="5" cols="9" hspacing="0" expand="true">
+							<grid rows="7" cols="9" hspacing="0" expand="true">
 								<!-- r1,2 -->
 								<ui:with vreduce="true">
 									<cell rows="2"><label text="labels.mode"/></cell>
@@ -592,6 +592,8 @@
 									<value id="rrl_${i}"/>
 									<value id="rt_${i}"/>
 								</ui:with>
+								<cell cols="9"><hsep bg.color="bg" pad.v="2" vreduce="true"/></cell>
+								<cell cols="9"><void fill="true" expand="true"/></cell>
 
 							</grid>
 						</vbox>
